# screenshot-tool

./: .gitignore  README.md  config.example.yaml  pyproject.toml  screenshot
hooks/: __init__.py  _default.py
src/screenshot_tool/: __init__.py  __main__.py  capture.py  cli.py  config.py  emit.py  hooks.py  instance.py  output.py  wayfire.py
src/screenshot_tool/ui/: __init__.py  drawing.py  magnifier.py  overlay.py
