[project]
name = "screenshot-tool"
version = "2.0.0"
description = "Wayland screenshot utility with region selection and annotation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Ckrest"}]
dependencies = [
    "pyyaml>=6.0",
    "platformdirs>=3.0",
    "PyGObject>=3.42",
    "pycairo>=1.20",
]

[project.optional-dependencies]
wayfire = ["wayfire"]

[project.scripts]
screenshot = "screenshot_tool.cli:main"

[project.urls]
Repository = "https://github.com/Ckrest/screenshot-tool"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
